@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'android'
 apply plugin: 'me.tatarka.retrolambda'  //RetroLamda
 apply plugin: 'android-apt'     // Android-Annotation
+apply plugin: 'org.robolectric'     // Android-Test
+
 
 android {
     compileSdkVersion 21
@@ -33,7 +35,10 @@ configurations {
 
 repositories {
     mavenCentral()
-    jcenter()
+//    jcenter()
+//    maven {
+//        url 'https://oss.sonatype.org/content/repositories/snapshots/'
+//    }
 }
 
 dependencies {
@@ -42,9 +47,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile "org.androidannotations:androidannotations-api:3.2"
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'io.reactivex:rxandroid:0.24.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
+
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.robolectric:robolectric:2.4'
 }
 
 retrolambda {
@@ -58,4 +67,31 @@ apt {
         resourcePackageName android.defaultConfig.applicationId
         androidManifestFile variant.outputs[0].processResources.manifestFile
     }
+}
+
+robolectric {
+    // Configure includes / excludes
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+
+    // Configure max heap size of the test JVM
+    maxHeapSize = '2048m'
+
+    // Configure the test JVM arguments - Does not apply to Java 8
+    //jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
+
+    // Specify max number of processes (default is 1)
+    maxParallelForks = 4
+
+    // Specify max number of test classes to execute in a test process
+    // before restarting the process (default is unlimited)
+    forkEvery = 150
+
+    // configure whether failing tests should fail the build
+//    ignoreFailures true
+
+    // use afterTest to listen to the test execution results
+    /*afterTest { descriptor, result ->
+        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
+    }*/
 }
